# Quaternions_Py

./: README.md  quaternions.py  requirements_dev.txt  setup.cfg  test_quaternion_unittest.py
src/: quaternions.py
tests/: test_quaternion_pytest.py  test_quaternion_unittest.py
