[metadata]
name = quaternions
version = 0.0.1
author = David Boe
# author_email = author@example.com
description = A simple quaternion library
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boedavida/Quaternions_Py
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.16
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
quaternions = py.typed

[flake8]
max-line-length = 120

[mypy]
# ignore_missing_imports = True
